# open-code-renpy-ui

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PLAN.md  README.md  ROADMAP.md  SPEC.md  biome.json  design-tokens.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  release.yml
apps/cli/: package.json  tsconfig.json
apps/cli/src/: main.ts
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/codegen/: load.ts
apps/desktop/src/components/: AssetPicker.tsx  ErrorBoundary.tsx  ExpressionBuilder.tsx  QuickInsert.tsx  ShortcutsHelp.tsx  StatusBar.tsx  TopBar.tsx  Welcome.tsx  WorkspaceTabs.tsx
apps/desktop/src/components/inspector/: Field.tsx  NodeInspector.tsx
apps/desktop/src/components/nodes/: BaseNode.tsx  index.tsx
apps/desktop/src/components/screens/: WidgetTree.tsx  widgets.ts
apps/desktop/src/lib/: useGlobalShortcuts.ts
apps/desktop/src/panels/: Canvas.tsx  CanvasPlaceholder.tsx  CodeLens.tsx  Inspector.tsx  Problems.tsx  Sidebar.tsx
apps/desktop/src/state/: empty.ts  ids.ts  project.ts  templates.ts  workspace.ts
apps/desktop/src/storage/: index.ts  memory.ts  tauri.ts  types.ts
apps/desktop/src/styles/: global.css
apps/desktop/src/views/: AssetsView.tsx  CanvasView.tsx  CharactersView.tsx  PreviewView.tsx  ScreensView.tsx  VariablesView.tsx
apps/desktop/test/: asset-validation.test.ts  characters-vars-assets.test.ts  project-store.test.ts
docs/: codegen-reference.md  getting-started.md  spec-reference.md
fixtures/demo-cafe/spec/.renpy-ui/: assets.json  characters.json  project.json  variables.json
fixtures/demo-screens/spec/.renpy-ui/: characters.json  project.json
fixtures/demo-stats/spec/.renpy-ui/: assets.json  characters.json  project.json  variables.json
fixtures/hello-world/spec/.renpy-ui/: assets.json  characters.json  project.json  variables.json
schemas/: assets.schema.json  characters.schema.json  project.schema.json  scene.schema.json  screen.schema.json  variables.schema.json
(+10 files in other folders)
