[package]
name = "renpy-ui-desktop"
version = "0.0.0"
description = "Open-Code-RenPy-UI desktop shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "renpy_ui_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Default features (empty)
default = []
# Embedded debug panel support in dev builds
custom-protocol = ["tauri/custom-protocol"]
