[package]
name = "renpy-ui-desktop"
version = "0.0.0"
description = "Open-Code-RenPy-UI desktop shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "renpy_ui_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
sha2 = "0.10"
notify = "6"
notify-debouncer-mini = "0.4"

[features]
# Default features (empty)
default = []
# Embedded debug panel support in dev builds
custom-protocol = ["tauri/custom-protocol"]
